--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -165,3 +165,10 @@ footer label {
     max-height: 500px;
     overflow: auto;
 }
+
+
+.sidebar .widget_pages ul {
+    margin:0;
+    max-height: 500px;
+    overflow: auto;
+}
